new: favicon, css header file

--- a/index.html
+++ b/index.html
@@ -6,41 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="assets/style/style.css">
+    <link rel="stylesheet" href="assets/style/header.css">
     <link rel="stylesheet" href="assets/style/buttons.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    
+    <title>Freelance</title>
+    <link rel="icon" type="image/png" href="assets\images\logo.png" />
 </head>
 
-<body>
-    <div  bgcolor=" #F7EDE8">
-        <header>
+<body bgcolor="#F7EDE8">
+        <header >
             <nav>
                 <a href="" class="nav__logo">
                     <img src="assets/images/logo.png" alt="" class="logo">
                 </a>
-                <ul class="nav__list">
+                <ul class="left_nav">
                     <li>
-                        <a style="font-weight: 700;" href="" class="nav__list-link">
+                        <a style="font-weight: 700;" href="" class="left_nav-link">
                             Главная
                         </a>
                     </li>
     
+                <!--
                     <li>
-                        <a href="" class="nav__list-link">
+                        <a href="" class="left_nav-link">
                             About
                         </a>
                     </li>
                     <li>
-                        <a href="" class="nav__list-link">
+                        <a href="" class="left_nav-link">
                             More
                         </a>
                     </li>
+                -->
                 </ul>
-                <ul class="about_you">
+                <ul class="right_nav">
                     <li>
                         <a href="" class="bell">
                             <img src="assets/images/bell.svg" alt="">
@@ -48,7 +52,7 @@
                     </li>
                     <li>
                         <a href="" class="bell">
-                            <img src="assets/images/image 12.png    " alt="">
+                            <img src="assets/images/profile.png    " alt="">
                     </li>
                     <li>
                         <a href="" class="leave">
