--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         </p>
 
 
-        <a href="" class="blackButton">начать</a>
+        <a href="" class="blackButton">Начать</a>
         <a href="" class="whiteButton">История транзакций</a>
+        
         <form method="post" class="postInputForm">
             <label>
                 Название заказа
