--- a/index.html
+++ b/index.html
@@ -76,7 +76,48 @@
 
 
         <a href="" class="blackButton">Начать</a>
-        <a href="" class="whiteButton">История транзакций</a>
+
+        <div class="gallery">
+            <div class="box"><img src=" assets/images/gallery1.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery2.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery3.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery4.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery5.png "></img></div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <a href="" class="whiteButton">История транзакций</a>
         
         <form method="post" class="postInputForm">
             <label>
@@ -117,7 +158,7 @@
                 Стоимость
                 <input name="submitted-name" autocomplete="name">
             </label>
-        </form>
+        </form> -->
 
 
     </main>
