Added services table

--- a/index.html
+++ b/index.html
@@ -78,13 +78,68 @@
         <a href="" class="blackButton">Начать</a>
 
         <div class="gallery">
-            <div class="box"><img src=" assets/images/gallery1.png "></img></div>
-            <div class="box"><img src=" assets/images/gallery2.png "></img></div>
-            <div class="box"><img src=" assets/images/gallery3.png "></img></div>
-            <div class="box"><img src=" assets/images/gallery4.png "></img></div>
-            <div class="box"><img src=" assets/images/gallery5.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery/gallery1.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery/gallery2.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery/gallery3.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery/gallery4.png "></img></div>
+            <div class="box"><img src=" assets/images/gallery/gallery5.png "></img></div>
         </div>
 
+
+        <div id="services">
+            <h1>Услуги разработки/дизайна</h1>
+            <div class="services_table">
+                <div class="services_table_1">
+
+                    <div class="mobile">
+                        <h2> Мобильные приложения</h2>
+                        <img src="assets/images/service/service_mobile.png">
+                    </div>
+
+                    <div class="model">
+                        <h2>Создание макета</h2>
+                        <img src="assets/images/service/service_model.png">
+                    </div>
+
+                    <div class="motion">
+                        <h2>Motion-дизайн</h2>
+                        <img src="assets/images/service/service_motion.png">
+                    </div>
+                </div>
+
+                <div class="services_table_2">
+                    <div class="games">
+                        <h2>Создание видеоигр</h2>
+                        <img src="assets/images/service/service_games.png">
+                    </div>
+
+                    <div class="ux_ui">
+                        <h2>UX/UI-дизайн</h2>
+                        <img src="assets/images/service/service_ux_ui.png">
+                    </div>
+                </div>
+
+                <div class="services_table_3">
+                    <div class="defend flex-item">
+                        <h2>Защита систем от кибератак</h2>
+                        <img src="assets/images/service/service_defend.png">
+                    </div>
+
+                    <div class="html flex-item">
+                        <h2>Верстка сайта</h2>
+                        <img src="assets/images/service/service_html.png">
+                    </div>
+
+                    <div class="interior flex-item">
+                        <h2>Дизайн интерьера</h2>
+                        <img src="assets/images/service/service_interior.png">
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
 
 
 
@@ -134,7 +189,7 @@
                 <option value="mobile">Мобильные приложения</option>
                 <option value="games">Создание видеоигр</option>
                 <option value="defend">Защита систем от кибератак</option>
-                <option value="website_layout">Верстка сайта</option>
+                <option value="html">Верстка сайта</option>
 
                 <option value="model">Создание макета</option>
                 <option value="motion">Motion-дизайн</option>
