Fixed services table Splitted css file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="assets/style/header.css">
     <link rel="stylesheet" href="assets/style/buttons.css">
+    <link rel="stylesheet" href="assets/style/mainpage/services.css">
+    <link rel="stylesheet" href="assets/style/mainpage/gallery.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,31 +93,31 @@
             <div class="services_table">
                 <div class="services_table_1">
 
-                    <div class="mobile">
+                    <div class="mobile flex-item">
                         <h2> Мобильные приложения</h2>
                         <img src="assets/images/service/service_mobile.png">
                     </div>
 
-                    <div class="model">
+                    <div class="model flex-item">
                         <h2>Создание макета</h2>
                         <img src="assets/images/service/service_model.png">
                     </div>
 
-                    <div class="motion">
+                    <div class="motion flex-item">
                         <h2>Motion-дизайн</h2>
                         <img src="assets/images/service/service_motion.png">
                     </div>
                 </div>
 
                 <div class="services_table_2">
-                    <div class="games">
+                    <div class="games flex-item">
                         <h2>Создание видеоигр</h2>
                         <img src="assets/images/service/service_games.png">
                     </div>
 
-                    <div class="ux_ui">
+                    <div class="ux_ui flex-item">
                         <h2>UX/UI-дизайн</h2>
-                        <img src="assets/images/service/service_ux_ui.png">
+                        <img src="assets/images/service/service_ux_ui2.png">
                     </div>
                 </div>
 
@@ -135,7 +137,9 @@
                         <img src="assets/images/service/service_interior.png">
                     </div>
                 </div>
+            </div>
 
+            <div id="registration">
 
             </div>
 
