--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/style/buttons.css">
     <link rel="stylesheet" href="assets/style/mainpage/services.css">
     <link rel="stylesheet" href="assets/style/mainpage/gallery.css">
+    <link rel="stylesheet" href="assets/style/mainpage/registration.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,10 +68,10 @@
 
 
     <main class="main">
-        <h2 class="main__title">
+        <h1 class="main__title">
             Фриланс биржа<br>
             <span>Freelance</span>
-        </h2>
+        </h1>
         <p class="main__descr">
             We cover all kinds of categories and <br>
             a weekly special guest.
@@ -89,62 +90,96 @@
 
 
         <div id="services">
-            <h1>Услуги разработки/дизайна</h1>
+            <h2>Услуги разработки/дизайна</h2>
             <div class="services_table">
                 <div class="services_table_1">
 
                     <div class="mobile flex-item">
-                        <h2> Мобильные приложения</h2>
-                        <img src="assets/images/service/service_mobile.png">
+                        <h3> Мобильные приложения</h2>
+                            <img src="assets/images/service/service_mobile.png">
                     </div>
 
                     <div class="model flex-item">
-                        <h2>Создание макета</h2>
-                        <img src="assets/images/service/service_model.png">
+                        <h3>Создание макета</h2>
+                            <img src="assets/images/service/service_model.png">
                     </div>
 
                     <div class="motion flex-item">
-                        <h2>Motion-дизайн</h2>
-                        <img src="assets/images/service/service_motion.png">
+                        <h3>Motion-дизайн</h2>
+                            <img src="assets/images/service/service_motion.png">
                     </div>
                 </div>
 
                 <div class="services_table_2">
                     <div class="games flex-item">
-                        <h2>Создание видеоигр</h2>
-                        <img src="assets/images/service/service_games.png">
+                        <h3>Создание видеоигр</h2>
+                            <img src="assets/images/service/service_games.png">
                     </div>
 
                     <div class="ux_ui flex-item">
-                        <h2>UX/UI-дизайн</h2>
-                        <img src="assets/images/service/service_ux_ui2.png">
+                        <h3>UX/UI-дизайн</h2>
+                            <img src="assets/images/service/service_ux_ui.png">
                     </div>
                 </div>
 
                 <div class="services_table_3">
                     <div class="defend flex-item">
-                        <h2>Защита систем от кибератак</h2>
-                        <img src="assets/images/service/service_defend.png">
+                        <h3>Защита систем от кибератак</h2>
+                            <img src="assets/images/service/service_defend.png">
                     </div>
 
                     <div class="html flex-item">
-                        <h2>Верстка сайта</h2>
-                        <img src="assets/images/service/service_html.png">
+                        <h3>Верстка сайта</h2>
+                            <img src="assets/images/service/service_html.png">
                     </div>
 
                     <div class="interior flex-item">
-                        <h2>Дизайн интерьера</h2>
-                        <img src="assets/images/service/service_interior.png">
+                        <h3>Дизайн интерьера</h2>
+                            <img src="assets/images/service/service_interior.png">
                     </div>
                 </div>
             </div>
 
             <div id="registration">
+                <h2>Регистрация</h2>
+                <img src="assets\images\registration_line.png">
 
+                <div>
+                    <form method="post" class="postInputForm">
+                        <label for="services">Вид услуги:</label>
+                        <select id="services" name="services">
+                            <img src="assets/images/select_arrow.png" alt="" class="logo"
+                                style="width:45px; height:42px;">
+
+                            <option value="mobile">Исполнитель</option>
+                            <option value="games">Заказчик</option>
+                        </select>
+                    </form>
+
+                    <form method="post" class="postInputForm">
+                        <div> <label>
+                                Фамилия Имя
+                                <input name="name" autocomplete="name">
+                            </label></div>
+                    </form>
+
+                    <form method="post" class="postInputForm">
+                        <label>
+                            Почта
+                            <input name="email" autocomplete="email">
+                        </label>
+                    </form>
+
+                    <form method="post" class="postInputForm">
+                        <label>
+                            Пароль
+                            <input type="password" autocomplete="new-password">
+                        </label>
+                    </form> -->
+                </div>
             </div>
 
         </div>
-
 
 
 
