create order file

--- a/index.html
+++ b/index.html
@@ -218,7 +218,11 @@
                         </form>
                     </div>
                     <a href="reg.html" class="blackButton">Зарегистрироваться</a>
-                    <a target="_blank" href="reg.html" class="blackButton">СОЗДАТЬ ЗАКАЗ</a>
+
+
+                    <a target="_blank" href="create_order.html" class="blackButton">СОЗДАТЬ ЗАКАЗ</a>
+                    <a target="_blank" href="create_order.html" class="blackButton">ПОПОЛНИТЬ БАЛАНС</a>
+                    <a target="_blank" href="create_order.html" class="blackButton">ВЫВЕСТИ ДЕНЬГИ</a>
                 </div>
             </div>
         </div>
