Add input/delete money blocks

--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                     <a href="reg.html" class="blackButton">Зарегистрироваться</a>
 
 
-                    <a target="_blank" href="create_order.html" class="blackButton">СОЗДАТЬ ЗАКАЗ</a>
-                    <a target="_blank" href="create_order.html" class="blackButton">ПОПОЛНИТЬ БАЛАНС</a>
-                    <a target="_blank" href="create_order.html" class="blackButton">ВЫВЕСТИ ДЕНЬГИ</a>
+                    <a target="_blank" href="window.html" class="blackButton">СОЗДАТЬ ЗАКАЗ</a>
+                    <a target="_blank" href="window.html" class="blackButton">ПОПОЛНИТЬ БАЛАНС</a>
+                    <a target="_blank" href="window.html" class="blackButton">ВЫВЕСТИ ДЕНЬГИ</a>
                 </div>
             </div>
         </div>
