Added notifications blocks

--- a/window.html
+++ b/window.html
@@ -114,6 +114,67 @@
         Подтвердить
       </a>
     </div>
+
+
+    <div class="notifications window">
+      <div class="bar">
+        <h2>
+          Уведомления
+        </h2>
+        <img class="bell" src="assets/images/bell.svg">
+      </div>
+
+      <div class="notification">
+        <div class="notification-title">
+          <h3>
+            Фаниль Назиров
+          </h3>
+          <div class="starbox">
+            <img src="assets/images/star.png">
+            <p>
+              5,0
+            </p>
+          </div>
+        </div>
+        <img src="assets/images/registration_line.png">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic facere, veritatis non laudantium quis quod
+          harum </p>
+      </div>
+
+      <div class="notification">
+        <div class="notification-title">
+          <h3>
+            Фаниль Назиров
+          </h3>
+          <div class="starbox">
+            <img src="assets/images/star.png">
+            <p>
+              5,0
+            </p>
+          </div>
+        </div>
+        <img src="assets/images/registration_line.png">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic facere, veritatis non laudantium quis quod
+          harum </p>
+      </div>
+
+      <div class="notification">
+        <div class="notification-title">
+          <h3>
+            Фаниль Назиров
+          </h3>
+          <div class="starbox">
+            <img src="assets/images/star.png">
+            <p>
+              5,0
+            </p>
+          </div>
+        </div>
+        <img src="assets/images/registration_line.png">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic facere, veritatis non laudantium quis quod
+          harum </p>
+      </div>
+    </div>
 </body>
 
 </html>
