Fixed services table

--- a/window.html
+++ b/window.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@700&display=swap" rel="stylesheet">
-  <title>Document</title>
+  <title>Document </title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         <form method="post" class="postInputForm">
           <label>
             Название заказа
-            <input name="" placeholder="Укажите самое главное о заказе">
+            <input name="order-title" placeholder="Укажите самое главное о заказе">
           </label>
         </form>
 
@@ -98,7 +98,7 @@
 
     <div class="delete_money window">
       <h2>
-        Пополнить баланс
+        Снять деньги со счёта
       </h2>
       <img src="assets\images\registration_line.png">
 
@@ -106,7 +106,7 @@
       <form method="post" class="postInputForm">
         <label>
 
-          <input name="order-cost" type="number" min="0" placeholder="Укажите сумму пополнения в рублях">
+          <input name="order-cost" type="number" min="0" placeholder="Сколько денег снять? (в рублях)">
         </label>
       </form>
 
