--- a/index.html
+++ b/index.html
@@ -155,17 +155,10 @@
                                 <option value="mobile">Исполнитель</option>
                                 <option value="games">Заказчик</option>
                             </select>
-                        </form>
-
-
-                        <form method="post" class="postInputForm">
                             <label>
                                 Почта
                                 <input name="email" autocomplete="email" placeholder="example@example.com">
                             </label>
-                        </form>
-
-                        <form method="post" class="postInputForm">
                             <label>
                                 Пароль
                                 <input type="password" autocomplete="new-password" placeholder="Введите пароль">
@@ -194,35 +187,24 @@
                                 <option value="mobile">Исполнитель</option>
                                 <option value="games">Заказчик</option>
                             </select>
-                        </form>
-
-                        <form method="post" class="postInputForm">
                             <div> <label>
                                     Фамилия Имя
                                     <input name="name" autocomplete="name" placeholder="Иванов Иван">
                                 </label></div>
-                        </form>
-
-                        <form method="post" class="postInputForm">
                             <label>
                                 Почта
                                 <input name="email" autocomplete="email" placeholder="example@example.com">
                             </label>
-                        </form>
-
-                        <form method="post" class="postInputForm">
                             <label>
                                 Пароль
                                 <input type="password" autocomplete="new-password" placeholder="Введите пароль">
                             </label>
                         </form>
+                        <a href="" class="blackButton">Зарегистрироваться</a>
                     </div>
-                    <a href="reg.html" class="blackButton">Зарегистрироваться</a>
 
 
                     <a target="_blank" href="window.html" class="blackButton">СОЗДАТЬ ЗАКАЗ</a>
-                    <a target="_blank" href="window.html" class="blackButton">ПОПОЛНИТЬ БАЛАНС</a>
-                    <a target="_blank" href="window.html" class="blackButton">ВЫВЕСТИ ДЕНЬГИ</a>
                 </div>
             </div>
         </div>
