--- a/window.html
+++ b/window.html
@@ -62,6 +62,31 @@
     </div>
 
 
+    
+    <div class="information window">
+      <h2>
+        Информация о заказе
+      </h2>
+      <img src="assets\images\registration_line.png">
+
+      <h3>
+        Статус заказа:
+      </h3>
+      <img src="assets\images\registration_line.png">
+
+
+      <form method="post" class="postInputForm">
+        <label>
+
+          <input name="order-cost" type="number" min="0" placeholder="Укажите сумму пополнения в рублях">
+        </label>
+      </form>
+
+      <a href="" class="blackButton">
+        Подтвердить
+      </a>
+
+
 
 
     <div class="input_money window">
