--- a/window.html
+++ b/window.html
@@ -28,6 +28,7 @@
             Название заказа
             <input name="order-title" placeholder="Укажите самое главное о заказе">
           </label>
+          <br>
           <label for="services">Вид заказа:</label>
           <select id="services" name="services">
             <img src="assets/images/select_arrow.png" alt="" class="logo" style="width:45px; height:42px;">
@@ -69,23 +70,14 @@
       <h2>
         Информация о заказе
       </h2>
-      <img src="assets\images\registration_line.png">
-
+      
       <h3>
         Статус заказа:
       </h3>
-      <img src="assets\images\registration_line.png">
-
-
-      <form method="post" class="postInputForm">
-        <label>
-
-          <input name="order-cost" type="number" min="0" placeholder="Укажите сумму пополнения в рублях">
-        </label>
-      </form>
+      
 
       <a href="" class="blackButton">
-        Подтвердить
+        Отменить заказ
       </a>
 
 
