Fixed employer profile page, added employee profile page

--- a/index.html
+++ b/index.html
@@ -24,28 +24,15 @@
 <body bgcolor="#F7EDE8">
     <header>
         <nav>
-            <a href="" class="nav__logo">
-                <img src="assets/images/logo.png" alt="" class="logo">
+            <a href="index.html" class="nav__logo">
+                <img src="assets/images/logo.png" alt="logo" class="logo">
             </a>
             <ul class="left_nav">
                 <li>
-                    <a style="font-weight: 700;" href="" class="left_nav-link">
+                    <a style="font-weight: 700;" href="index.html" class="left_nav-link">
                         Главная
                     </a>
                 </li>
-
-                <!--
-                    <li>
-                        <a href="" class="left_nav-link">
-                            About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="left_nav-link">
-                            More
-                        </a>
-                    </li>
-                -->
             </ul>
             <ul class="right_nav">
                 <li>
@@ -54,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" class="bell">
+                    <a href="" class="profile_photo_header">
                         <img src="assets/images/profile.png    " alt="">
                 </li>
                 <li>
@@ -204,6 +191,7 @@
                     </div>
 
                     <a target="_blank" href="window.html" class="blackButton">СОЗДАТЬ ЗАКАЗ</a>
+                    <a target="_blank" href="profile.html" class="blackButton">ПРОФИЛЬ</a>
                 </div>
             </div>
         </div>
