--- a/employer_profile.html
+++ b/employer_profile.html
@@ -18,12 +18,12 @@
 <body bgcolor="#F7EDE8">
     <header>
         <nav>
-            <a href="" class="nav__logo">
-                <img src="assets/images/logo.png" alt="" class="logo">
+            <a href="index.html" class="nav__logo">
+                <img src="assets/images/logo.png" alt="logo" class="logo">
             </a>
             <ul class="left_nav">
                 <li>
-                    <a style="font-weight: 700;" href="" class="left_nav-link">
+                    <a style="font-weight: 700;" href="index.html" class="left_nav-link">
                         Главная
                     </a>
                 </li>
@@ -36,8 +36,7 @@
                 </li>
                 <li>
                     <a href="" class="profile_photo_header">
-                        <img src="assets/images/profile.png" alt="">
-                    </a>
+                        <img src="assets/images/profile.png    " alt="">
                 </li>
                 <li>
                     <a href="" class="leave">
@@ -77,7 +76,16 @@
                 Мои заказы
             </h1>
         </div>
-
+        <div class="container">
+            <a href="" class="create__link">
+                <p class="create_link-text">
+                    Создать заказ
+                </p>
+                <p class="create_link-descr">
+                    +
+                </p>
+            </a>
+        </div>
         <div class="container ">
             <ul class="actual__list">
                 <li>
