Заливаю вторую часть биржы где пока появился один работник, надо подредактировать отступы в данном объекте

--- a/burse.html
+++ b/burse.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/style/mainpage/gallery.css">
     <link rel="stylesheet" href="assets/style/mainpage/registration.css">
     <link rel="stylesheet" href="assets/style/burse.css">
+    <link rel="stylesheet" href="assets/style/windows.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,16 +26,15 @@
 <body bgcolor="#F7EDE8">
     <header>
         <nav>
-            <a href="" class="nav__logo">
-                <img src="assets/images/logo.png" alt="" class="logo">
+            <a href="index.html" class="nav__logo">
+                <img src="assets/images/logo.png" alt="logo" class="logo">
             </a>
             <ul class="left_nav">
                 <li>
-                    <a style="font-weight: 700;" href="" class="left_nav-link">
+                    <a style="font-weight: 700;" href="index.html" class="left_nav-link">
                         Главная
                     </a>
                 </li>
-
             </ul>
             <ul class="right_nav">
                 <li>
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" class="bell">
+                    <a href="" class="profile_photo_header">
                         <img src="assets/images/profile.png    " alt="">
                 </li>
                 <li>
@@ -99,6 +99,25 @@
 
             </div>
         </div>
+    </div>
+    <br>
+       <br>
+      <div class="notification">
+   <div class="notification-title">
+     <h3>
+       Фаниль Назиров
+     </h3>
+     <div class="starbox" >
+       <img src="assets/images/star.png">
+       <p>
+         5,0
+       </p>
+     </div>
+   </div>
+   <img src="assets/images/registration_line.png">
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic facere, veritatis non laudantium quis quod
+     harum </p>
+ </div>
     </main>
 </body>
 
