--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <img src="assets\images\registration_line.png">
 
                     <div>
-                        <form action="main.py" method="post" class="postInputForm">
+                        <form  method="post" class="postInputForm">
                             <label for="services">Выберите роль:</label>
                             <select id="loginServices" name="services">
                                 <img src="assets/images/select_arrow.png" alt="" class="logo"
@@ -174,7 +174,7 @@
                     <img src="assets\images\registration_line.png">
 
                     <div>
-                        <form action="main.py" method="post" class="postInputForm">
+                        <form  method="post" class="postInputForm">
                             <label for="services">Выберите роль:</label>
                             <select id="registrationServices" name="services">
                                 <img src="assets/images/select_arrow.png" alt="" class="logo"
