--- a/burse.html
+++ b/burse.html
@@ -99,25 +99,24 @@
 
             </div>
         </div>
-    </div>
-    <br>
-       <br>
-      <div class="notification">
-   <div class="notification-title">
-     <h3>
-       Фаниль Назиров
-     </h3>
-     <div class="starbox" >
-       <img src="assets/images/star.png">
-       <p>
-         5,0
-       </p>
+
+   <div class="notification_b">
+     <div class="notification-title_b">
+       <h3>
+         Фаниль Назиров
+       </h3>
+       <div class="starbox_b">
+         <img src="assets/images/star.png">
+         <p>
+           5,0
+         </p>
+       </div>
      </div>
+     <img src="assets/images/registration_line.png">
+     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic facere, veritatis non laudantium quis quod
+       harum </p>
    </div>
-   <img src="assets/images/registration_line.png">
-   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic facere, veritatis non laudantium quis quod
-     harum </p>
- </div>
+      
     </main>
 </body>
 
